--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+</head>
+
 <body>
 
-<h1>Home</h1>
+    <h1>Home</h1>
 
-<ul>
-    <li>About Us</li>
-    <li>Blog</li>
-    <li>Work</li>
-    <li>Contact Us</li>
-</ul>
+    <ul>
+        <li>About Us</li>
+        <li>Blog</li>
+        <li>Work</li>
+        <li>Contact Us</li>
+    </ul>
 
 </body>
+
 </html>
